changed colors per client request, working on tablet/ desktop dropdown menu issues next

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -435,7 +435,7 @@
         width: 100%;
         /* prevents padding from affecting height and width */
         box-sizing: border-box;
-        background-color: #fff;
+        background-color: var(--primary);
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
         position: fixed;
         z-index: 10000;
@@ -486,7 +486,7 @@
             padding: (16/16rem) (24/16rem);
             /* prevents padding from affecting height and width */
             box-sizing: border-box;
-            background-color: #f7f7f7;
+            background-color: var(--primary);
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -632,7 +632,7 @@
             width: 100%;
             height: 2px;
             border-radius: 2px;
-            background-color: #FAFBFC;
+            background-color: #000;
             position: absolute;
             left: 50%;
             transform: translateX(-50%);
@@ -668,7 +668,7 @@
             height: auto;
             padding-bottom: (48/16rem);
             opacity: 0;
-            background-color: #fff;
+            background-color: var(--primary);
             box-shadow: inset rgba(0, 0, 0, 0.2) 0px 8px 24px;
             overflow: hidden;
             position: absolute;
@@ -756,7 +756,7 @@
             position: relative;
 
             &.cs-active {
-                color: var(--primary);
+                color: #000;
             }
 
             &:hover {
@@ -882,7 +882,7 @@
             &.cs-drop-link {
                 /* 14px - 16px */
                 font-size: clamp(.875rem, 2vw, 1.25rem);
-                color: #fff;
+                color: #000;
             }
         }
     }
@@ -919,7 +919,7 @@
             min-width: (200/16rem);
             margin: 0;
             padding: 0;
-            background-color: #fff;
+            background-color: #ffe600;
             overflow: hidden;
             opacity: 0;
             visibility: hidden;
@@ -1060,7 +1060,7 @@
         padding: 0;
         /* prevents padding from affecting height and width */
         box-sizing: border-box;
-        background-color: #fff;
+        background-color: #ffe600;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
         position: fixed;
         z-index: 10000;
@@ -1091,7 +1091,7 @@
                 content: '';
                 width: 100vw;
                 height: 100%;
-                background: #f7f7f7;
+                background: #ffe600;
                 opacity: 1;
                 position: absolute;
                 display: block;
@@ -1242,7 +1242,7 @@
             margin: 0;
             color: #fff;
             padding: 0 (32/16rem);
-            background-color: var(--primary);
+            background-color: #000;
             overflow: hidden;
             display: inline-block;
             position: relative;
